up and build pass

--- a/CardStack/build.gradle
+++ b/CardStack/build.gradle
@@ -1,19 +1,18 @@
 apply plugin: 'com.android.library'
-apply plugin: 'com.novoda.bintray-release'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion '23.0.2'
+    compileSdkVersion 31
+    //buildToolsVersion '31.0.0'
 
     defaultConfig {
         minSdkVersion 14
-        targetSdkVersion 23
+        targetSdkVersion 31
         versionCode 1
         versionName "1.0"
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_6
-        targetCompatibility JavaVersion.VERSION_1_6
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     buildTypes {
         release {
@@ -24,18 +23,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.1.1'
-}
-
-//./gradlew clean build bintrayUpload -PbintrayUser=BINTRAY_USERNAME -PbintrayKey=BINTRAY_KEY -PdryRun=false
-publish {
-    userOrg = 'juanpablo'
-    groupId = 'com.wenchao'
-    artifactId = 'cardstack'
-    version = '1.0.0'
-    description = 'A tinder like swipeable card stack component'
-    website = 'https://github.com/juanpabloprado/AndroidSwipeableCardStack'
-    issueTracker = "https://github.com/wenchaojiang/AndroidSwipeableCardStack/issues"
-    repository = "https://github.com/juanpabloprado/AndroidSwipeableCardStack.git"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
