--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,17 @@
 
 buildscript {
     repositories {
+		google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.0'
-        classpath 'com.novoda:bintray-release:0.3.4'
+        classpath 'com.android.tools.build:gradle:7.1.3'
     }
 }
 
 allprojects {
     repositories {
+		google()
         jcenter()
     }
 }
