--- a/DemoApp/build.gradle
+++ b/DemoApp/build.gradle
@@ -30,6 +30,6 @@ dependencies {
     //compile(name:'android-card-stack-0.1.0', ext:'aar')
     //http://stackoverflow.com/questions/21170395/how-to-include-a-library-module-dependency-in-an-android-studio-project
     implementation project(':CardStack')
-    implementation 'com.android.support:appcompat-v7:28.0.0'
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
